--- a/packages/cra-template-webext/package.json
+++ b/packages/cra-template-webext/package.json
@@ -8,7 +8,7 @@
 		"template",
 		"webext"
 	],
-	"description": "The web extension template for Create React App.",
+	"description": "Create browser extensions for Chrome, Firefox and other WebExtension compliant browsers with React and no build configuration.",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/gmreburn/create-react-webext.git",
